Added "movies" REST API. Added scenario for GET and POST.